Добавлены тесты для Lexer'а и доделана обработка пробельных символов

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,2 +1,5 @@
-file(GLOB SRC_FILES "./src/*.cpp")
-add_executable(Tests ${SRC_FILES})
+
+file(GLOB SRC_FILES "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
+add_executable(TestsLexer ${SRC_FILES})
+target_include_directories(TestsLexer PUBLIC ${INCLUDE_DIR})
+target_link_libraries(TestsLexer GL::AST gtest gtest_main)
