--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(lab3)
 set(CMAKE_CXX_STANDARD 14)
 set(INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 
-add_subdirectory(./src)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/src)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/tests)
